# virtualeyes

./: CMakeLists.txt  README  README.md  README_BACKUP
resources/: icons.qrc
src/: CMakeLists.txt  breakpoint.cpp  breakpoint.hpp  console_input_widget.cpp  console_input_widget.hpp  console_widget.cpp  console_widget.hpp  main.cpp  main_view.cpp  main_view.hpp  main_window.cpp  main_window.hpp  memory_region.cpp  memory_region.hpp  range_map.cpp  range_map.hpp  session.cpp  session.hpp  snapshot.cpp  snapshot.hpp  struct_manager.cpp  struct_manager.hpp  veye_scene.cpp  veye_scene.hpp  virtualeyes.cpp  virtualeyes.hpp  vm_run.cpp  vm_run.hpp  vscript.cpp  vscript.hpp
src/core/: common.hpp  debug.cpp  debug.hpp  enum_convert.cpp  enum_convert.hpp  global.hpp  handle.hpp  handle_base.cpp  handle_base.hpp  soft_handle.hpp  store.cpp  store.hpp  target_host.hpp  vexcept.cpp  vexcept.hpp
src/core/db/: db.cpp  db.hpp  realtime_feed.cpp  realtime_feed.hpp
src/db/: db.cpp  db.hpp
src/models/: captured_item.cpp  captured_item.hpp  x86_32.hpp
src/opsys/: os_none.hpp  win2k8.hpp
src/prototyping/: console_widget.cpp  console_widget.hpp  list_view.cpp  list_view.hpp  memory_legend_item.cpp  memory_legend_item.hpp  memory_window.cpp  memory_window.hpp  reference_graph.cpp  reference_graph.hpp
src/vm_iface/: gdb_iface.cpp  gdb_iface.hpp  vm_iface.cpp  vm_iface.hpp
src/widgets/: abstract_hud_widget.cpp  abstract_hud_widget.hpp  connection_widget.cpp  connection_widget.hpp  style_mgr.cpp  style_mgr.hpp  timeline_widget.cpp  timeline_widget.hpp
